07_retirement/grade.txt
Grading at Tue Sep  8 10:46:54 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘retirement’:
retirement.c:81:3: error: ISO C forbids nested functions [-Werror=pedantic]
   int main () {
   ^
retirement.c:81:7: error: ‘main’ is normally a non-static function [-Werror=main]
   int main () {
       ^
retirement.c:86:3: error: expected declaration or statement at end of input
   }
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
